k8s/recipai-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipai-ingress
  namespace: team-disappointment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: recip-ai.k8s.ase.cit.tum.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: client-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/server"
            backend:
              service:
                name: server-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/genai"
            backend:
              service:
                name: genai-service
                port:
                  number: 80
